@@ -18,3 +18,4 @@
   - Added ability to retrieve converted integer and boolean option values.
   - The `option()` methods are now deprecated, in favor of new `get()` and
     `getOrElse()` methods that are modeled after their `Map` counterparts.
+  - Added a new `getSection()` method that returns an `Option[Section]`.
